Corrections after review

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               </button>
               <ul class="list navigation-row">
                 <li class="item">
-                  <a class="references menu active" href="/"> Studio</a>
+                  <a class="references menu active is-open" href="/"> Studio</a>
                 </li>
                 <li class="item">
                   <a class="references menu" href="porfolio.html"> Portfolio</a>
