Second review corrections

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <header class="container">
         <div class="top-menu">
           <nav class="top-menu-nav">
-            <a class="references" href="/">
+            <a class="references full-logo" href="/">
               <span class="logo-part1"> Web</span
               ><span class="logo-part2">studio</span>
             </a>
@@ -222,7 +222,7 @@
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="list team-list">
-            <li class="item">
+            <li class="team-item">
               <article class="card">
                 <img
                   srcset="
@@ -272,7 +272,7 @@
                 </div>
               </article>
             </li>
-            <li class="item">
+            <li class="team-item">
               <article class="card">
                 <img
                   srcset="
@@ -322,7 +322,7 @@
                 </div>
               </article>
             </li>
-            <li class="item">
+            <li class="team-item">
               <article class="card">
                 <img
                   srcset="
@@ -372,7 +372,7 @@
                 </div>
               </article>
             </li>
-            <li class="item">
+            <li class="team-item">
               <article class="card">
                 <img
                   srcset="
@@ -385,7 +385,7 @@
                   "
                   src="./images/mobiDaniel.jpg"
                   alt="Picture_of_UI_Designer"
-                  width="264"
+                  
                 />
                 <div class="card-description">
                   <h3 class="picture-title">Daniel Wilson</h3>
@@ -596,13 +596,11 @@
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the<a
-                class="modal-reference"
-                href="/"
-              >
-                Privacy Policy</a
-              ></label
-            >
+              <span>I accept the terms and conditions of the
+              <a class="modal-reference"
+                href="/">Privacy Policy</a>
+              </span>
+              </label>
           </div>
           <button class="button-send" type="submit">Send</button>
         </form>
