--- a/porfolio.html
+++ b/porfolio.html
@@ -22,7 +22,7 @@
       <header class="container">
         <div class="top-menu">
           <nav class="top-menu-nav">
-            <a class="references" href="/">
+            <a class="references full-logo" href="/">
               <span class="logo-part1"> Web</span
               ><span class="logo-part2">studio</span>
             </a>
